# razzbot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml  shuttle-deploy.yml
src/: commands.rs  main.rs
