[package]
name = "razzbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.32.0"
shuttle-runtime = "0.32.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
shuttle-secrets = "0.32.0"
tokio = "1.26.0"
tracing = "0.1.37"
poise = "0.5.7"
shuttle-poise = "0.32.0"
